testsuite/veronac/resolution/compile-fail/module/child.out/stderr.txt
child.verona:5:8: error: Cannot find value for symbol 'T'
  m(x: T) {}
       ^
1 error generated
